# pdf-font-decoder

./: .gitignore  .prettierrc  README.md  build.js  eslint.config.js  index.html  lefthook.yml  mise.toml  package.json  pdf-font-decoder.service  prettier.config.js  pyproject.toml  start.sh  svg-font-analyzer.service  tsconfig.app.json  vite.config.js  vite.config.ts
api/: config.py  main.py
api/database/: database.py  models.py
api/routers/: ai_mapping.py  fonts.py  glyphs.py  svg.py
api/services/: font_service.py  svg_service.py
backend/: .gitignore  main.py  models.py  requirements.txt  utils.py
backend/database/: database.py  models.py
backend/routers/: fonts.py  glyphs.py  svg.py
backend/services/: font_service.py  svg_service.py
frontend/: .gitignore  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: FileUpload.svelte  GlyphEditor.svelte  LivePreview.svelte  SVGSelector.svelte  SourceOfTruth.svelte  ZipUpload.svelte
src/: App.svelte  app.css  main.ts
src/lib/: api.ts  types.ts  utils.ts
src/lib/components/: FileUpload.svelte  GlyphEditor.svelte  LivePreview.svelte  SVGSelector.svelte  SourceOfTruth.svelte  ZipUpload.svelte
src/lib/components/ui/badge/: badge.svelte  index.ts
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
(+28 files in other folders)
